--- a/package.json
+++ b/package.json
@@ -3,18 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev -p 3001 --turbopack",
     "build": "next build --turbopack",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^3.0.47",
+    "@ai-sdk/cerebras": "^2.0.34",
+    "@ai-sdk/cohere": "^3.0.21",
+    "@ai-sdk/deepinfra": "^2.0.34",
+    "@ai-sdk/deepseek": "^2.0.20",
+    "@ai-sdk/fireworks": "^2.0.34",
+    "@ai-sdk/google": "^3.0.31",
+    "@ai-sdk/groq": "^3.0.24",
+    "@ai-sdk/mistral": "^3.0.20",
+    "@ai-sdk/openai": "^3.0.33",
+    "@ai-sdk/perplexity": "^3.0.19",
+    "@ai-sdk/togetherai": "^2.0.33",
+    "@ai-sdk/xai": "^3.0.59",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@types/uuid": "^10.0.0",
     "@xyflow/react": "^12.10.0",
+    "ai": "^6.0.99",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dexie": "^4.3.0",
